# rulang

./: .clang-format  CMakeLists.txt  README.md
src/: generator.hpp  interfaces.hpp  lexer.hpp  main.cpp  occurance.hpp  parser.cpp  parser.hpp  rulang.cpp  rulang.hpp  util.hpp
src/ast/: ast.hpp
src/lexer/: lex.cpp  lex_raw.cpp  precedence.cpp  rule_number.cpp
test/: main.cpp
test/test_lexer/: lexer.cpp
test/test_lexer/file_examples/: one_line.rulang
